# smart-librarian

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  k8s.yaml  pyproject.toml  requirements.txt
app/: agent.py  embeddings.py  main.py  retriever.py  tools.py
app/auth/: jwt_auth.py  jwt_handler.py
app/config/: classes.py  constants.py
app/controller/: auth_routes.py  chatbot_routes.py
app/models/: db_model.py  schemas.py
app/services/: agent_tools.py  chat_service.py  db_connection.py  openai_client.py  user_service.py
app/utils/: helpers.py  retriever.py  tools.py  validators.py
app/view/: index.html  script.js  style.css
data/: book_summaries.json
